<?xml version='1.0' encoding='utf-8'?><!--


-->
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="paint_studio_app_name" tools:ignore="UnusedResources">Paint Studio</string>
    <string name="button_brush">Brush</string>
    <string name="button_cursor">Cursor</string>
    <string name="button_pipette">Pipette</string>
    <string name="button_undo">Undo</string>
    <string name="button_redo">Redo</string>
    <string name="button_info">Information</string>
    <string name="button_stamp">Stamp</string>
    <string name="button_import_image">Import image</string>
    <string name="button_eraser">Eraser</string>
    <string name="button_transform">Transform</string>
    <string name="button_fill">Fill</string>
    <string name="button_line">Line</string>
    <string name="button_text">Text</string>
    <string name="button_shape">Shapes</string>
    <string name="button_hand">Hand</string>
    <string name="button_spray_can">Spray can</string>
    <string name="button_apply">Apply</string>
    <string name="button_checkmark">Checkmark</string>
    <string name="done">Done</string>

    <string name="gallery">Gallery</string>
    <string name="load_sticker_error">Could not load Sticker</string>
    <string name="error_unknown_error">Something went wrong.</string>

    <string name="cap_circle">Circle</string>
    <string name="cap_square">Square</string>

    <string name="stamptool_paste">Paste</string>
    <string name="stamptool_copy">Copy</string>
    <string name="stamptool_cut">Cut</string>

    <string name="stickers">Stickers</string>
    <string name="dialog_import_image_title" translatable="false">@string/button_import_image</string>
    <string name="dialog_save_image_title" translatable="false">@string/menu_save_image</string>
    <string name="dialog_tools_title">Tools</string>
    <string name="dialog_error_save_title">Error load/save file</string>
    <string name="dialog_error_sdcard_text">Check image or SD-card!\nTry changing image name</string>
    <string name="dialog_brush_width_text">Stroke width</string>
    <string name="dialog_warning_new_image">Save changes?</string>
    <string name="help_title">Help</string>
    <string name="help_content_eraser">Remove parts of the image like with an eraser.</string>
    <string name="help_content_brush">Tap on the symbols on the bottom bar to change the color or the brush size.</string>
    <string name="help_content_eyedropper">Tap on the image to select a color.</string>
    <string name="help_content_undo">Tap to undo your previous action.</string>
    <string name="help_content_redo">Tap to redo an undone action.</string>
    <string name="help_content_fill">Tap on the image to fill an area with the selected color.</string>
    <string name="help_content_cursor">Position the cursor where you want to draw. Tap to activate the cursor. Move your finger to draw. Tap again to deactivate.</string>
    <string name="help_content_transform">Use to transform the image.</string>
    <string name="help_content_stamp">Move and resize the rectangle to cover the area you want to stamp. Long press to select the area. Move it, then tap on the checkmark to stamp.</string>
    <string name="help_content_import_png">Import an image from the gallery to the stamp tool.</string>
    <string name="help_content_line">Draw a straight line.</string>
    <string name="help_content_text">Write text and format it. Resize the text box afterwards. Tap on the checkmark to insert the text on the image.</string>
    <string name="help_content_shape">Choose a shape and tap on the checkmark to insert the selected shape.</string>
    <string name="help_content_layer">Create new layers or modify existing ones.</string>
    <string name="help_content_color_chooser">Select or adjust a color.</string>
    <string name="help_content_hand">Move your finger to move the canvas.</string>
    <string name="help_content_spray_can">Move your finger on the image to create a spray can pattern.</string>
    <string name="closing_catroid_security_question_title">Back to project</string>
    <string name="closing_security_question_title">Quit</string>
    <string name="closing_security_question">Save changes?</string>
    <string name="menu_new_image">New image</string>
    <string name="menu_discard_image">Discard image</string>
    <string name="no_longclick_on_hidden_layer">You are only able to merge or reorder if all layers are visible</string>
    <string name="no_tools_on_hidden_layer">No tools are available on hidden layer</string>
    <string name="menu_load_image">Load image</string>
    <string name="menu_save_image">Save image</string>
    <string name="menu_save_copy">Save copy</string>
    <string name="menu_hide_menu">Fullscreen</string>
    <string name="share_image_menu">Share image</string>
    <string name="share_image_via_text">Send image via</string>
    <string name="paint_studio_menu_about" translatable="false">@string/paint_studio_about_title</string>
    <string name="menu_rate_us">Rate us!</string>
    <string name="menu_export">Export</string>
    <string name="menu_feedback">Feedback</string>
    <string name="saved">Image saved</string>
    <string name="copy">Copy saved</string>
    <string name="menu_quit">Quit</string>
    <string name="save_button_text">Save</string>
    <string name="discard_button_text">Discard</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="overwrite_button_text">Overwrite</string>

    <string name="resize_nothing_to_resize">nothing to resize</string>
    <string name="resize_cannot_resize_to_this_size">cannot resize to this size</string>
    <string name="resize_max_image_resolution_reached">max image resolution reached</string>

    <string name="text_tool_dialog_input_title">Your text:</string>
    <string name="text_tool_dialog_format_options">Format options:</string>
    <string name="text_tool_dialog_underline_shortcut">U</string>
    <string name="text_tool_dialog_italic_shortcut">I</string>
    <string name="text_tool_dialog_bold_shortcut">B</string>
    <string name="text_tool_dialog_strike_through_shortcut">abc</string>
    <string name="text_tool_dialog_input_hint">Tap here to write</string>
    <string name="text_tool_dialog_font_monospace" translatable="false">Monospace</string>
    <string name="text_tool_dialog_font_serif" translatable="false">Serif</string>
    <string name="text_tool_dialog_font_sans_serif" translatable="false">Sans Serif</string>
    <string name="text_tool_dialog_font_dubai" translatable="false">Dubai</string>
    <string name="text_tool_dialog_font_arabic_stc" translatable="false">STC</string>

    <string name="shape_tool_dialog_rect_title">Rectangle</string>
    <string name="shape_tool_dialog_ellipse_title">Ellipse</string>
    <string name="shape_tool_dialog_star_title">Star</string>
    <string name="shape_tool_dialog_heart_title">Heart</string>
    <string name="shape_tool_dialog_fill_title">Fill</string>
    <string name="shape_tool_dialog_outline_title">Outline</string>

    <string name="fill_tool_dialog_color_tolerance_title">Color tolerance</string>

    <string name="transform_tool_rotate_left">rotate left</string>
    <string name="transform_tool_rotate_right">rotate right</string>
    <string name="transform_tool_flip_vertical">flip vertical</string>
    <string name="transform_tool_flip_horizontal">flip horizontal</string>
    <string name="transform_tool_resize_text">resize</string>
    <string name="transform_tool_auto_crop_text">crop/enlarge</string>
    <string name="transform_width_text">Width</string>
    <string name="transform_height_text">Height</string>
    <string name="transform_auto_crop_text">Auto</string>
    <string name="pixel">px</string>

    <string name="stamp_tool_copy_hint">Long press to copy content</string>

    <string name="layers_title">Layers</string>
    <string name="layer_new">New layer</string>
    <string name="layer_delete">Delete layer</string>
    <string name="layer_too_many_layers">Too many layers</string>
    <string name="layer_merged">Layers merged</string>
    <string name="layer_background">Layer background</string>

    <string name="dialog_shape_text">Shape</string>
    <string name="dialog_loading_image_failed_title">Error on loading image</string>
    <string name="dialog_loading_image_failed_text">Not a valid image</string>
    <string name="dialog_settings">Settings</string>

    <string name="dialog_save_image_name">Image name</string>
    <string name="dialog_save_image_format">Image format</string>

    <string name="dialog_save_jpg_option_quality">Quality:</string>

    <string name="paint_studio_jpg_title_dialog" translatable="false">jpg</string>
    <string name="paint_studio_jpg_message_dialog">Takes up <b>minimal storage space</b>. <b>No transparency</b> is remembered.</string>
    <string name="paint_studio_png_title_dialog" translatable="false">png</string>
    <string name="paint_studio_png_message_dialog">Lossless compression. Transparency is preserved.</string>
    <string name="paint_studio_ora_title_dialog" translatable="false">Ora</string>
    <string name="paint_studio_ora_message_dialog">This format remembers <b>layers</b>. <b>It can be opened by apps that support the Openraster format.</b></string>


    <string name="permission_info_external_storage_text">This app needs the requested permission to function properly. In order to save images to the local memory, the app needs read and write access to it.</string>
    <string name="permission_info_permanent_denial_text">This app needs the requested permission to function properly. In order to save images to the local memory, the app needs read and write access to it.
        As you have denied permission with do not ask again, please go to your phone settings and grant the required permissions if you wish to use the associated functions.</string>

    <string name="drawer_open" tools:ignore="UnusedResources">Open navigation drawer</string>
    <string name="drawer_close" tools:ignore="UnusedResources">Close navigation drawer</string>
    <string name="transform_info_text">Drag edges to their new position, tap on the checkmark to enlarge or crop the image area.</string>
    <string name="cursor_draw_inactive">Pan to position, then tap to start painting.</string>
    <string name="cursor_draw_active">Pan to draw, then tap again to stop painting.</string>
    <string name="welcome_to_pocket_paint">Welcome To Paint Studio</string>
    <string name="intro_welcome_text">With Paint Studio there are no limits to your creativity. If you are new, start the intro, or skip it if you are already familiar with Paint Studio.</string>
    <string name="intro_tool_more_information">Click on a tool to get more information</string>
    <string name="more_possibilities">More possibilities</string>
    <string name="intro_possibilities_text">Use the top bar to open the main menu and undo or redo changes</string>
    <string name="landscape">Landscape</string>
    <string name="intro_landscape_text">Paint Studio also supports drawing in landscape mode to give you the best painting experience.</string>
    <string name="enjoy_pocket_paint">You are all set. Enjoy Paint Studio.</string>
    <string name="intro_get_started">Get started and create a new masterpiece.</string>
    <string name="lets_go">Let\'s go</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="paint_studio_about_title">About</string>
    <string name="paint_studio_about_version" translatable="false">Version %s</string>
    <string name="paint_studio_about_license" translatable="false">GNU Affero General Public License, v3</string>
    <string name="paint_studio_about_content">Paint Studio is a picture editing library that is part of the Catrobat project.\n\nCatrobat is a visual programming language and set of creativity tools for smartphones.\n\nThe source code of Paint Studio is mainly licensed under the %s.\nFor precise details of the license see the link below.</string>
    <string name="paint_studio_about_url_license_description">Paint Studio source code license</string>
    <string name="paint_studio_about_url_catrobat_description">About Catrobat</string>
    <string name="paint_studio_about_url_license" translatable="false">&lt;a href=\"https://catrob.at/licenses\"&gt;%s&lt;/a&gt;</string>
    <string name="paint_studio_about_url_catrobat" translatable="false">&lt;a href=\"https://catrobat.org/\"&gt;%s&lt;/a&gt;</string>

    <string name="paint_studio_intro">Intro</string>

    <string name="paint_studio_intro_split_screen_not_supported">Intro does not support split screen.</string>

    <string name="paint_studio_overwrite_title">Overwrite File?</string>
    <string name="paint_studio_overwrite">You are about to overwrite an existing image (hint: To save it as a new image, use the \"%s\" option). Save anyway?</string>

    <string name="paint_studio_like_us">Do you like Paint Studio?</string>
    <string name="paint_studio_rate_us">Would you like to rate Paint Studio?</string>
    <string name="paint_studio_feedback">We are sorry to hear that. If you want to share your experience with us, please write to JDOTSLAB</string>
    <string name="paint_studio_yes">Yes</string>
    <string name="paint_studio_no">No</string>
    <string name="paint_studio_ok"  translatable="false">@android:string/ok</string>
    <string name="paint_studio_cancel">Cancel</string>
    <string name="paint_studio_not_now">Not now</string>
    <string name="paint_studio_rate_us_title">Rate Paint Studio</string>

    <string name="bottom_navigation_tools">Tools</string>
    <string name="bottom_navigation_current">Current</string>
    <string name="bottom_navigation_color">Color</string>
    <string name="bottom_navigation_layers">Layers</string>
    <string name="bottom_navigation_item">Item for bottom navigation</string>

    <string name="intro_bottom_navigation_tools_description">Switch to the tool you want to use.</string>
    <string name="intro_bottom_navigation_current_description">Shows the currently used tool and opens its options.</string>
    <string name="intro_bottom_navigation_color_description">Shows the currently used color and opens the color picker.</string>
    <string name="intro_bottom_navigation_layers_description">Opens the layer menu and lets you manage your layers.</string>

    <string name="paint_studio_tool_icon_description">Current tool icon</string>
</resources>
